; ModuleID = '/home/carl/AnghaBench/esp-idf/components/soc/esp32s2beta/extr_rtc_wdt.c_rtc_wdt_is_on.c'
source_filename = "/home/carl/AnghaBench/esp-idf/components/soc/esp32s2beta/extr_rtc_wdt.c_rtc_wdt_is_on.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@RTC_CNTL_WDTCONFIG0_REG = common dso_local global i32 0, align 4
@RTC_CNTL_WDT_EN = common dso_local global i32 0, align 4
@RTC_CNTL_WDT_FLASHBOOT_MOD_EN = common dso_local global i32 0, align 4

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i32 @rtc_wdt_is_on() #0 {
  %1 = load i32, i32* @RTC_CNTL_WDTCONFIG0_REG, align 4
  %2 = load i32, i32* @RTC_CNTL_WDT_EN, align 4
  %3 = call i64 @REG_GET_BIT(i32 %1, i32 %2)
  %4 = icmp ne i64 %3, 0
  br i1 %4, label %10, label %5

5:                                                ; preds = %0
  %6 = load i32, i32* @RTC_CNTL_WDTCONFIG0_REG, align 4
  %7 = load i32, i32* @RTC_CNTL_WDT_FLASHBOOT_MOD_EN, align 4
  %8 = call i64 @REG_GET_BIT(i32 %6, i32 %7)
  %9 = icmp ne i64 %8, 0
  br label %10

10:                                               ; preds = %5, %0
  %11 = phi i1 [ true, %0 ], [ %9, %5 ]
  %12 = zext i1 %11 to i32
  ret i32 %12
}

declare dso_local i64 @REG_GET_BIT(i32, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
